<resources>
    <string name="app_name">Book Store</string>

    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="borrowed">Borrowed</string>
    <string name="setting">Setting</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="borrow_book">Borrow Book</string>
    <string name="most_searched">Most Searched</string>
    <string name="best_seller">Best Seller</string>
    <string name="new_arrival">New Arrival</string>
    <string name="remove_from_fav">Remove from favourites</string>
    <string name="no_favourites_found">No favourites found!</string>
    <string name="login_sign_up">Login / Sign up</string>
    <string name="login_failed">Login Failed</string>
    <string name="no_borrow_found">You have not borrowed any book!</string>
    <string name="return_book">Return Book</string>
    <string name="logout">Logout</string>

    <string name="enter_username_email">Enter username/email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
</resources>
