<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_color_primary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:elevation="8dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <com.arkapp.bookstore.utils.TrapeziumView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:edgeRadius="50"
                    app:shapeColor="@color/colorBackground"
                    app:slopeHeightPercent="25" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/enter_username_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/enter_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:maxLength="10" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loginProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:elevation="8dp"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBtn"
                    android:layout_width="58dp"
                    android:layout_height="68dp"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="18dp"
                    app:cornerRadius="29dp"
                    app:icon="@drawable/ic_arrow_forward" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signUpCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:elevation="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <com.arkapp.bookstore.utils.TrapeziumView
                    android:layout_width="match_parent"
                    android:layout_height="410dp"
                    app:edgeRadius="50"
                    app:shapeColor="@color/colorBackground"
                    app:slopeHeightPercent="15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="410dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpUserName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/enter_username">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpUserNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/enter_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpEmailEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/enter_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:maxLength="10" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpConfirmPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="18dp"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpConfirmPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:maxLength="10" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/signupProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:elevation="8dp"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/insideSignUpBtn"
                    android:layout_width="58dp"
                    android:layout_height="68dp"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="18dp"
                    app:cornerRadius="29dp"
                    app:icon="@drawable/ic_arrow_forward" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="-38dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <com.arkapp.bookstore.utils.TrapeziumView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:rotation="180"
                    app:edgeRadius="50"
                    app:shapeColor="@color/colorBackground"
                    app:slopeHeightPercent="40" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/signUpDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="4dp"
                        android:text="@string/not_have_an_account"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUpBtn"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/sign_up"
                        app:cornerRadius="24dp"
                        app:elevation="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>
</layout>